# stateguard

./: .env.example  .gitignore  CHECKSUMS.sha256  IMPLEMENTATION-MASTER-PLAN.md  LICENSE-NOTICE.md  MANIFEST.json  Makefile  README.md  RELEASE-NOTES.md  SECURITY.md  pyproject.toml  requirements-dev.txt
ci/: Jenkinsfile  README.md  github-actions-self-hosted.yml  gitlab-ci.yml  project-fast-checks.sh  project-full-checks.sh  publish-stateguard-summary.sh  run-database-concurrency-suite.sh  run-model-checking.sh
config/: sonar-project.properties.example  stateguard.example.yaml
control-plane/: README.md  openapi.yaml  publish-example.sh  schema.sql
docs/: 00-executive-summary.md  01-goals-non-goals-and-guarantees.md  02-reference-architecture.md  03-repository-contract.md  04-specification-and-event-b.md  05-static-analysis-stack.md  06-sonarqube-at-scale.md  07-semgrep-rules-program.md  08-joern-and-application-property-graph.md  09-proof-obligations.md  10-postgresql-sql-and-migrations.md  11-integration-concurrency-and-model-tests.md  12-local-ai-agent.md  13-ledger-resumability-and-central-control-plane.md  14-ci-cd-pipelines.md  15-security-offline-and-supply-chain.md  16-operations-and-scaling.md  17-implementation-roadmap.md  18-team-process-and-governance.md  19-risk-register.md  20-production-readiness-checklist.md  21-contracts-and-extension-points.md  22-migration-from-agent-skill.md  SOURCES.md
event-b/: OrderWorkflow.mch  README.md  proof-export.example.json  proof-obligations.yaml  run-prob.sh
infra/: .env.example  README.md  (+1 more)
joern/: README.md  (+3 more)
(+112 files in other folders)
